syntax = "proto3";

import "common.proto";

message ConnectRequest {
}

message ConnectResponse {
  ServerInfo server_info = 1;

  // Represents a squashed diff from the start of the world until now.
  ServerWorldStateDiff initial_world_state = 2;
}
