syntax = "proto3";

import "common.proto";
import "connect.proto";
import "disconnect.proto";
import "ack_updates.proto";
import "request_updates.proto";
import "send_new_events.proto";
import "world_update.proto";

// Contains a request between the client and the server.
message ClientServerMessage {
  // All information the server needs to know about the client. Required.
  ClientInfo client_info = 1;

  // The payload of the message.
  oneof payload {
    ClientServerConnect connect = 2;
    ClientServerDisconnect disconnect = 3;
    ClientServerAckUpdates ack_updates = 4;
    ClientServerRequestUpdates request_updates = 5;
    ClientServerSendNewEvents send_new_events = 6;
  }
}

// Sent between the server ad authenticated/connected clients.
// Can be sent either over udp or tcp, depending on how critical it is.
message ServerClientMessage {
  // All information a connected client needs to know about the server.
  ServerInfo server_info = 1;

  oneof payload {
    // Sent to the client over udp to notify the client of changes.
    ServerClientWorldUpdate world_update = 2;
  }
}


